error enlace tecnico

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <!-- REEMPLAZAR LINKS -->
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSdFkByXEO9MMd9ob5M01juxcgdj6L0VMrI-FK09K15xcZTp6A/viewform?usp=header" class="btn btn-client">Publicar problema</a>
-    <a href="hhttps://docs.google.com/forms/d/e/1FAIpQLSd7f_B1hxeJ9yaCmTKFMTp60GH_4-kwA6eJHvcmtHDc23uqfQ/viewform?usp=publish-editor" class="btn btn-tech">Soy técnico</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSd7f_B1hxeJ9yaCmTKFMTp60GH_4-kwA6eJHvcmtHDc23uqfQ/viewform?usp=header" class="btn btn-tech">Soy técnico</a>
 </header>
 
 <section>
